fix ancher : now it look on page when jump to

--- a/public/less/wide-pc.less
+++ b/public/less/wide-pc.less
@@ -236,6 +236,9 @@ body>header {
 			text-decoration : underline;
 		}
 	}
+	sup.footnote-ref a {
+		padding-top : 70px;
+	}
 	h1, h2, h3, h4, h5, h6 {
 		margin : 0em;
 		margin-top : 1em;
